added colors and global css

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <!-- Нормалізатор -->
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <!-- Google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
+
+    <title>Portfolio</title>
   </head>
   <body>
     <!-- Header -->
@@ -36,105 +50,107 @@
     </header>
     <!-- Main -->
     <main>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img
-            src="./images/app1.jpg"
-            alt="banking app interface"
-            width="360"
-            height="300"
-          />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/app2.jpg"
-            alt="someone pays cashless with phone"
-            width="360"
-            height="300"
-          />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/app3.jpg"
-            alt="notebook and phone"
-            width="360"
-            height="300"
-          />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/app4.jpg"
-            alt="taxist holds steering wheel and watches app on phone"
-            width="360"
-            height="300"
-          />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/app5.jpg"
-            alt="different screen illustrations"
-            width="360"
-            height="300"
-          />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/app6.jpg"
-            alt="girl is watching on the phone"
-            width="360"
-            height="300"
-          />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/app7.jpg"
-            alt="differect pictures of instagram stories"
-            width="360"
-            height="300"
-          />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/app8.jpg"
-            alt="woman holds bag with vegitables"
-            width="360"
-            height="300"
-          />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/app9.jpg"
-            alt="pouring milk into cup of coffee"
-            width="360"
-            height="300"
-          />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <ul>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+        <ul>
+          <li>
+            <img
+              src="./images/app1.jpg"
+              alt="banking app interface"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/app2.jpg"
+              alt="someone pays cashless with phone"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/app3.jpg"
+              alt="notebook and phone"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/app4.jpg"
+              alt="taxist holds steering wheel and watches app on phone"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/app5.jpg"
+              alt="different screen illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/app6.jpg"
+              alt="girl is watching on the phone"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/app7.jpg"
+              alt="differect pictures of instagram stories"
+              width="360"
+              height="300"
+            />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/app8.jpg"
+              alt="woman holds bag with vegitables"
+              width="360"
+              height="300"
+            />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/app9.jpg"
+              alt="pouring milk into cup of coffee"
+              width="360"
+              height="300"
+            />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
