--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <!-- Нормалізатор -->
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <!-- Google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,28 +31,30 @@
 
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <ul class="main-nav">
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-nav">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -58,39 +63,39 @@
     <!-- Main -->
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button button">Order Service</button>
       </section>
 
       <!-- Features section -->
-      <section>
-        <h2>Our features</h2>
+      <section class="features">
+        <h2 class="secondary-title">Our features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -99,8 +104,8 @@
       </section>
 
       <!-- What we are doing section -->
-      <section>
-        <h2>What are we doing</h2>
+      <section class="work">
+        <h2 class="secondary-title">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -130,8 +135,8 @@
       </section>
 
       <!-- Our Team section -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="secondary-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -140,20 +145,20 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-            <ul>
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
+            <ul class="team-contacts">
               <li>
-                <a href="">Instagram</a>
+                <a href="" class="link">Instagram</a>
               </li>
               <li>
-                <a href="">Twitter</a>
+                <a href="" class="link">Twitter</a>
               </li>
               <li>
-                <a href="">Facebook</a>
+                <a href="" class="link">Facebook</a>
               </li>
               <li>
-                <a href="">LinkedIn</a>
+                <a href="" class="link">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -164,20 +169,20 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-            <ul>
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
+            <ul class="team-contacts">
               <li>
-                <a href="">Instagram</a>
+                <a href="" class="link">Instagram</a>
               </li>
               <li>
-                <a href="">Twitter</a>
+                <a href="" class="link">Twitter</a>
               </li>
               <li>
-                <a href="">Facebook</a>
+                <a href="" class="link">Facebook</a>
               </li>
               <li>
-                <a href="">LinkedIn</a>
+                <a href="" class="link">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -188,20 +193,20 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-            <ul>
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
+            <ul class="team-contacts">
               <li>
-                <a href="">Instagram</a>
+                <a href="" class="link">Instagram</a>
               </li>
               <li>
-                <a href="">Twitter</a>
+                <a href="" class="link">Twitter</a>
               </li>
               <li>
-                <a href="">Facebook</a>
+                <a href="" class="link">Facebook</a>
               </li>
               <li>
-                <a href="">LinkedIn</a>
+                <a href="" class="link">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -212,20 +217,20 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-            <ul>
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
+            <ul class="team-contacts">
               <li>
-                <a href="">Instagram</a>
+                <a href="" class="link">Instagram</a>
               </li>
               <li>
-                <a href="">Twitter</a>
+                <a href="" class="link" class="link">Twitter</a>
               </li>
               <li>
-                <a href="">Facebook</a>
+                <a href="" class="link">Facebook</a>
               </li>
               <li>
-                <a href="">LinkedIn</a>
+                <a href="" class="link">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -234,9 +239,9 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo link">WebStudio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
