--- a/index.html
+++ b/index.html
@@ -33,28 +33,32 @@
     <!-- Header -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
-        <ul class="main-nav">
+        <a href="./index.html" class="header-logo logo link"
+          ><span>Web</span>Studio</a
+        >
+        <ul class="header-nav">
           <li>
-            <a href="./index.html" class="link">Studio</a>
+            <a href="./index.html" class="header-link link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link">Contacts</a>
+            <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="contacts-nav">
-        <ul>
+      <address>
+        <ul class="header-contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="header-link link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="header-link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -65,36 +69,36 @@
       <!-- Hero section -->
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button button">Order Service</button>
+        <button type="button" class="hero-btn button">Order Service</button>
       </section>
 
       <!-- Features section -->
       <section class="features">
-        <h2 class="secondary-title">Our features</h2>
-        <ul>
+        <h2 class="secondary-title visually-hidden">Our features</h2>
+        <ul class="features-list">
           <li>
-            <h3 class="features-title">Strategy</h3>
+            <h3 class="features-title subtitle">Strategy</h3>
             <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Punctuality</h3>
+            <h3 class="features-title subtitle">Punctuality</h3>
             <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Diligence</h3>
+            <h3 class="features-title subtitle">Diligence</h3>
             <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="features-title">Technologies</h3>
+            <h3 class="features-title subtitle">Technologies</h3>
             <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -106,9 +110,10 @@
       <!-- What we are doing section -->
       <section class="work">
         <h2 class="secondary-title">What are we doing</h2>
-        <ul>
+        <ul class="work-list">
           <li>
             <img
+              class="work-img"
               src="./images/work1.jpg"
               alt="computer monitor"
               width="360"
@@ -117,6 +122,7 @@
           </li>
           <li>
             <img
+              class="work-img"
               src="./images/work2.jpg"
               alt="mobile phone with different screens"
               width="360"
@@ -125,6 +131,7 @@
           </li>
           <li>
             <img
+              class="work-img"
               src="./images/work3.jpg"
               alt="mobile phone in hand and laptop behind"
               width="360"
@@ -137,100 +144,106 @@
       <!-- Our Team section -->
       <section class="team">
         <h2 class="secondary-title">Our Team</h2>
-        <ul>
-          <li>
+        <ul class="team-list">
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/team1.jpg"
               alt="photo"
               width="264"
               height="260"
             />
-            <h3 class="team-title">Mark Guerrero</h3>
+            <h3 class="team-title subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
             <ul class="team-contacts">
               <li>
-                <a href="" class="link">Instagram</a>
+                <a href="" class="link team-contact-link">Instagram</a>
               </li>
               <li>
-                <a href="" class="link">Twitter</a>
+                <a href="" class="link team-contact-link">Twitter</a>
               </li>
               <li>
-                <a href="" class="link">Facebook</a>
+                <a href="" class="link team-contact-link">Facebook</a>
               </li>
               <li>
-                <a href="" class="link">LinkedIn</a>
+                <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
             </ul>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/team2.jpg"
               alt="photo"
               width="264"
               height="260"
             />
-            <h3 class="team-title">Tom Ford</h3>
+            <h3 class="team-title subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
             <ul class="team-contacts">
               <li>
-                <a href="" class="link">Instagram</a>
+                <a href="" class="link team-contact-link">Instagram</a>
               </li>
               <li>
-                <a href="" class="link">Twitter</a>
+                <a href="" class="link team-contact-link">Twitter</a>
               </li>
               <li>
-                <a href="" class="link">Facebook</a>
+                <a href="" class="link team-contact-link">Facebook</a>
               </li>
               <li>
-                <a href="" class="link">LinkedIn</a>
+                <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
             </ul>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/team3.jpg"
               alt="photo"
               width="264"
               height="260"
             />
-            <h3 class="team-title">Camila Garcia</h3>
+            <h3 class="team-title subtitle">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
             <ul class="team-contacts">
               <li>
-                <a href="" class="link">Instagram</a>
+                <a href="" class="link team-contact-link">Instagram</a>
               </li>
               <li>
-                <a href="" class="link">Twitter</a>
+                <a href="" class="link team-contact-link">Twitter</a>
               </li>
               <li>
-                <a href="" class="link">Facebook</a>
+                <a href="" class="link team-contact-link">Facebook</a>
               </li>
               <li>
-                <a href="" class="link">LinkedIn</a>
+                <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
             </ul>
           </li>
-          <li>
+          <li class="team-list-item">
             <img
+              class="team-img"
               src="./images/team4.jpg"
               alt="photo"
               width="264"
               height="260"
             />
-            <h3 class="team-title">Daniel Wilson</h3>
+            <h3 class="team-title subtitle">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
             <ul class="team-contacts">
               <li>
-                <a href="" class="link">Instagram</a>
+                <a href="" class="link team-contact-link">Instagram</a>
               </li>
               <li>
-                <a href="" class="link" class="link">Twitter</a>
+                <a href="" class="link team-contact-link" class="link"
+                  >Twitter</a
+                >
               </li>
               <li>
-                <a href="" class="link">Facebook</a>
+                <a href="" class="link team-contact-link">Facebook</a>
               </li>
               <li>
-                <a href="" class="link">LinkedIn</a>
+                <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
             </ul>
           </li>
@@ -240,7 +253,9 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link">WebStudio</a>
+      <a href="./index.html" class="footer-logo logo link"
+        ><span>Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
