--- a/portfolio.html
+++ b/portfolio.html
@@ -27,140 +27,179 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a href="./index.html" class="header-logo logo link"
+          ><span>Web</span>Studio</a
+        >
+        <ul class="header-nav">
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="header-link link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="header-link link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="header-link link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="header-contacts">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="header-link link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="header-link link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <!-- Main -->
     <main>
-      <section>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+      <section class="portfolio">
+        <ul class="portfolio-filter-list">
+          <li>
+            <button type="button" class="button portfolio-filter-btn">
+              All
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button portfolio-filter-btn">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button portfolio-filter-btn">
+              App
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button portfolio-filter-btn">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" class="button portfolio-filter-btn">
+              Marketing
+            </button>
+          </li>
         </ul>
-        <ul>
+        <ul class="portfolio-projects-list">
           <li>
             <img
+              class="portfolio-img"
               src="./images/app1.jpg"
               alt="banking app interface"
               width="360"
               height="300"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h3 class="portfolio-title subtitle">
+              Banking App Interface Concept
+            </h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app2.jpg"
               alt="someone pays cashless with phone"
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app3.jpg"
               alt="notebook and phone"
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-title subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app4.jpg"
               alt="taxist holds steering wheel and watches app on phone"
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app5.jpg"
               alt="different screen illustrations"
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-title subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app6.jpg"
               alt="girl is watching on the phone"
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-title subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app7.jpg"
               alt="differect pictures of instagram stories"
               width="360"
               height="300"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h3 class="portfolio-title subtitle">Instagram Stories Concept</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app8.jpg"
               alt="woman holds bag with vegitables"
               width="360"
               height="300"
             />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="portfolio-title subtitle">Organic Food</h3>
+            <p class="portfolio-text">Web Site</p>
           </li>
           <li>
             <img
+              class="portfolio-img"
               src="./images/app9.jpg"
               alt="pouring milk into cup of coffee"
               width="360"
               height="300"
             />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="portfolio-title subtitle">Fresh Coffee</h3>
+            <p class="portfolio-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo logo link"
+        ><span>Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
