--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
               <li>
-                <a href="" class="link team-contact-link" class="link"
-                  >Twitter</a
-                >
+                <a href="" class="link team-contact-link">Twitter</a>
               </li>
               <li>
                 <a href="" class="link team-contact-link">Facebook</a>
