--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <!-- Header -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="header-logo logo link"
-          ><span>Web</span>Studio</a
+        <a href="./index.html" class="logo link"
+          >Web<span class="header-logo">Studio</span></a
         >
-        <ul class="header-nav">
+        <ul class="list header-nav">
           <li>
             <a href="./index.html" class="header-link link">Studio</a>
           </li>
@@ -48,8 +48,8 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-contacts">
+      <address class="header-contacts">
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="header-link link"
               >info@devstudio.com</a
@@ -75,7 +75,7 @@
       <!-- Features section -->
       <section class="features">
         <h2 class="secondary-title visually-hidden">Our features</h2>
-        <ul class="features-list">
+        <ul class="list features-list">
           <li>
             <h3 class="features-title subtitle">Strategy</h3>
             <p class="features-text">
@@ -110,7 +110,7 @@
       <!-- What we are doing section -->
       <section class="work">
         <h2 class="secondary-title">What are we doing</h2>
-        <ul class="work-list">
+        <ul class="list work-list">
           <li>
             <img
               class="work-img"
@@ -144,7 +144,7 @@
       <!-- Our Team section -->
       <section class="team">
         <h2 class="secondary-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="list team-list">
           <li class="team-list-item">
             <img
               class="team-img"
@@ -155,7 +155,7 @@
             />
             <h3 class="team-title subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
-            <ul class="team-contacts">
+            <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -180,7 +180,7 @@
             />
             <h3 class="team-title subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
-            <ul class="team-contacts">
+            <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -205,7 +205,7 @@
             />
             <h3 class="team-title subtitle">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
-            <ul class="team-contacts">
+            <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -230,7 +230,7 @@
             />
             <h3 class="team-title subtitle">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
-            <ul class="team-contacts">
+            <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -251,8 +251,8 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo logo link"
-        ><span>Web</span>Studio</a
+      <a href="./index.html" class="logo link"
+        >Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
