--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
     <!-- Header -->
     <header class="header">
       <nav>
-        <a href="./index.html" class="header-logo logo link"
-          ><span>Web</span>Studio</a
+        <a href="./index.html" class="logo link"
+          >Web<span class="header-logo">Studio</span></a
         >
-        <ul class="header-nav">
+        <ul class="list header-nav">
           <li>
             <a href="./index.html" class="header-link link">Studio</a>
           </li>
@@ -44,8 +44,8 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-contacts">
+      <address class="header-contacts">
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="header-link link"
               >info@devstudio.com</a
@@ -62,7 +62,8 @@
     <!-- Main -->
     <main>
       <section class="portfolio">
-        <ul class="portfolio-filter-list">
+        <h1 class="portfolio-main-title">Our projects</h1>
+        <ul class="list portfolio-filter-list">
           <li>
             <button type="button" class="button portfolio-filter-btn">
               All
@@ -89,7 +90,7 @@
             </button>
           </li>
         </ul>
-        <ul class="portfolio-projects-list">
+        <ul class="list portfolio-projects-list">
           <li>
             <img
               class="portfolio-img"
@@ -196,8 +197,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="footer-logo logo link"
-        ><span>Web</span>Studio</a
+      <a href="./index.html" class="logo link"
+        >Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
