--- a/portfolio.html
+++ b/portfolio.html
@@ -92,105 +92,125 @@
         </ul>
         <ul class="list portfolio-projects-list">
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app1.jpg"
-              alt="banking app interface"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">
-              Banking App Interface Concept
-            </h3>
-            <p class="portfolio-text">App</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app1.jpg"
+                alt="banking app interface"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">
+                Banking App Interface Concept
+              </h2>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app2.jpg"
-              alt="someone pays cashless with phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app2.jpg"
+                alt="someone pays cashless with phone"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app3.jpg"
-              alt="notebook and phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Meditation App</h3>
-            <p class="portfolio-text">App</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app3.jpg"
+                alt="notebook and phone"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Meditation App</h2>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app4.jpg"
-              alt="taxist holds steering wheel and watches app on phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app4.jpg"
+                alt="taxist holds steering wheel and watches app on phone"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app5.jpg"
-              alt="different screen illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app5.jpg"
+                alt="different screen illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app6.jpg"
-              alt="girl is watching on the phone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app6.jpg"
+                alt="girl is watching on the phone"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app7.jpg"
-              alt="differect pictures of instagram stories"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Instagram Stories Concept</h3>
-            <p class="portfolio-text">Design</p>
+            <a href="" class="link portfolio-link"
+              ><img
+                class="portfolio-img"
+                src="./images/app7.jpg"
+                alt="differect pictures of instagram stories"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">
+                Instagram Stories Concept
+              </h2>
+              <p class="portfolio-text">Design</p></a
+            >
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app8.jpg"
-              alt="woman holds bag with vegitables"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Organic Food</h3>
-            <p class="portfolio-text">Web Site</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app8.jpg"
+                alt="woman holds bag with vegitables"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
           <li>
-            <img
-              class="portfolio-img"
-              src="./images/app9.jpg"
-              alt="pouring milk into cup of coffee"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title subtitle">Fresh Coffee</h3>
-            <p class="portfolio-text">Web Site</p>
+            <a href="" class="link portfolio-link">
+              <img
+                class="portfolio-img"
+                src="./images/app9.jpg"
+                alt="pouring milk into cup of coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title subtitle">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
